<resources>
    <string name="Answer71">Stand at-least 5 feet away from the camera</string>
    <string name="Answer72">Adequate lighting with proper visibility is required for Caloriemeter to work. Camera shouldn’t be facing directly towards the light sources</string>
    <string name="Answer73">Nose to knee should be visible in frame</string>
    <string name="Answer74">The calories burned for Yoga, Pranayama, cycling, free weights can’t be tracked.</string>
    <string name="Date_of_birth">Date of birth</string>
    <string name="Female">Female</string>
    <string name="IntroducingCommunity">Introducing Community!</string>
    <string name="Link_to_your_one_abc_id">Link Your One ABC ID</string>
    <string name="Link_to_your_one_abc_id_desc">Link Your ABHI account with your One ABC ID to manage all your money solutions from one place.</string>
    <string name="Login_Register">Login or Sign up</string>
    <string name="Login_with_username">Login with username</string>
    <string name="Male">Male</string>
    <string name="Mobile_No">Mobile No</string>
    <string name="Next">Next</string>
    <string name="Rs">₹</string>
    <string name="Todays_activity_status">Todays activity status</string>
    <string name="Whats_your_dob">"What's your date of birth?"</string>
    <string name="Whats_your_first_name">"Hello,what's your first name"</string>
    <string name="Whats_your_last_name">"What's your last name"</string>
    <string name="Your_lifestyle_trends">Your lifestyle trends</string>
    <string name="_13_active_dayz">13 Active Dayz</string>
    <string name="_1_min">1 min</string>
    <string name="_275_ndayz">"275
dayz"</string>
    <string name="_2_mins">2 mins</string>
    <string name="_325_ndayz">"325
dayz"</string>
    <string name="_3_mins">3 mins</string>
    <string name="a_great_way_to_spot_patterns_in_your_health_wellness_journey">A great way to spot patterns in your health &amp; wellness journey.</string>
    <string name="aa_cust_no">040 233 21206</string>
    <string name="aadhaar_card">Aadhaar Card</string>
    <string name="aadhaar_number">Aadhaar Number</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_assitant">ABHI Assist</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="access_health_records">Get access to your &lt;b>Health Records&lt;/b></string>
    <string name="access_policy_data">Your policy</string>
    <string name="access_to_partners_section">Access to Partners Section</string>
    <string name="acra_subject">Activ Health Crash Log</string>
    <string name="act_days_tut_header">Earn Active Dayz™ by doing any one of below activities in a day.</string>
    <string name="act_days_tut_read_more">Doing either gets you maximum of one Active Day in a day.</string>
    <string name="act_days_tut_step_1">Walk 10,000 steps or more in a day by linking your wearable device or fitness app</string>
    <string name="act_days_tut_step_2">Check-in and spend 30 mins at our partner Gym or Fitness Center</string>
    <string name="act_days_tut_step_3">Burn 300 calories or more in a single session.(A single session entails 1 start and a stop activity done on a wearable device)</string>
    <string name="activAge_desc">Your actual age is different from your biological age, because your body may be aging faster than you realize. Your Activ Age™ is your biological age or health age.</string>
    <string name="activAge_score">Activ Age™</string>
    <string name="activDays_desc">Earn Activ Dayz™ by walking 10,000 steps or burning 300 calories or checking in at out partner gym in a day and earn back upto 30% of your premium back.</string>
    <string name="activDays_score">Activ Dayz™</string>
    <string name="activ_age">Activ age</string>
    <string name="activ_age_desc">This expresses your actual age compared to your health age</string>
    <string name="activ_age_description">Take the Activ Age test &amp; know how to manage your activity levels &amp; eating habits for a fitter you.</string>
    <string name="activ_age_description_mul">Check now to see how young you really feel!</string>
    <string name="activ_age_improve">Did your &lt;b>Active Age&lt;/b> improve? Check now</string>
    <string name="activ_age_inactive_msg">Answer a few questions about your health and lifestyle and get correct Activ Age™</string>
    <string name="activ_age_tm">Active Age™</string>
    <string name="activ_day_desc">"To earn an active day perform any one of the following activities and track your progress

• Walking 10,000 steps a day
• Burning 300 cal in a single session
• 1 Gym session at our network gym"</string>
    <string name="activ_days_count_low">Your Activ Dayz™ count is low. Put on your shoes...work up a sweat...Live a better day by completing 10k target.</string>
    <string name="activ_dayz">Active Dayz</string>
    <string name="activ_dayz_can_help_you_earn_on_policies">Activ dayz can help you earn on policies</string>
    <string name="activ_dayz_earned">"Activ Dayz
earned"</string>
    <string name="activ_dayz_zero_calorie">You haven’t burn any calories this week.</string>
    <string name="activ_dayz_zero_calorie_month">You haven’t burn any calories this month.</string>
    <string name="activ_dayz_zero_gym">You haven’t done any gym check-ins this week. Visit our partner gyms and earn an Active day!.</string>
    <string name="activ_dayz_zero_gym_month">You haven’t done any gym check-ins this month. Visit our partner gyms and earn an Active day!.</string>
    <string name="activ_dayz_zero_step">You haven’t walked for a week.</string>
    <string name="activ_dayz_zero_step_month">You haven’t walked for a month.</string>
    <string name="activ_health_login">Activ Health Login</string>
    <string name="activ_health_registration">Activ Health Registration</string>
    <string name="activ_living">Activ Living Blog</string>
    <string name="activ_mind">Active Mind</string>
    <string name="activ_vid_1">Track your workouts using Caloriemeter</string>
    <string name="activ_vid_2">Workout with our videos using Caloriemeter</string>
    <string name="activ_vid_3">Workout with our on-demand videos without Caloriemeter</string>
    <string name="activdayz_awsm">Awesome!! You need</string>
    <string name="activdayz_btn_cancel">Cancel</string>
    <string name="advice_best_course">Advice on the best course of treatment</string>
    <string name="already_register_click_login">Looks like you are already registered. Please click on login to go further!</string>
    <string name="automatically_enrolled_for_opinion_1">You are automatically enrolled for a free second opinion by Assist America. Get trusted advice from top doctors and specialists working in world-class hospitals.</string>
    <string name="automatically_enrolled_for_opinion_2">Assist America will help you get a documented second opinion if you get diagnosed with any complex, grave, or critical illness.</string>
    <string name="become_an_advisor">Become an Advisor</string>
    <string name="cashless_hospitals">Cashless Hospital</string>
    <string name="chat_with_us">Chat with us</string>
    <string name="claims">Claims</string>
    <string name="close">Close</string>
    <string name="diagnosis_confirm">Diagnosis confirmation</string>
    <string name="fingerprint_login_text">Fingerprint Login</string>
    <string name="follow_medical_advice">Follow-up medical advice</string>
    <string name="free_medical_opinion">Free second medical e-opinion by Falck</string>
    <string name="fri">F</string>
    <string name="health_record">My Health</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="hint_dob">eg. 29-09-1990</string>
    <string name="how_its_work_text">How does it work?</string>
    <string name="login">Login</string>
    <string name="mon">M</string>
    <string name="my_policy">My Policy</string>
    <string name="password_alpha_numeric_text">Password must have 1 number and 1 capital letter</string>
    <string name="password_cannot_contain_pass">"Password cannot contain the word 'password'"</string>
    <string name="password_character_length_text">Password must be 8 – 32 characters long</string>
    <string name="password_example">"• Example 'Pass@1234'"</string>
    <string name="password_optional_char_text">Optional ! Special characters allowed are Underscore (_), Period (.), Hyphen (-), At the Rate (@), exclamation mark (!), Hash (#), Dollar ($)</string>
    <string name="please_enter_date_of_birth">Please enter your date of birth</string>
    <string name="port">Port-in to ABHI</string>
    <string name="pre_existing_condition">Pre-existing conditions</string>
    <string name="receive_doc_second_opinion">The program allows members to receive a documented second medical opinion on a complex, grave or critical illness diagnosis, directly from a specialist, working in a world-class medical institution.</string>
    <string name="refer_a_friend">Refer a Friend</string>
    <string name="regular_illness_not_complex">Regular illness which are not complex, grave, or critical</string>
    <string name="repeat_consultation">Repeated consultations unless the case requires a revaluation</string>
    <string name="sat">S</string>
    <string name="settings">Settings</string>
    <string name="submit_small">Submit</string>
    <string name="sun">S</string>
    <string name="switch_policy_plan">Switch Policy/Plan</string>
    <string name="thu">T</string>
    <string name="too_early_diagnosis">Case evaluation if it’s too early for diagnosis</string>
    <string name="tue">T</string>
    <string name="username_not_as_password">• It should not contain the username as password</string>
    <string name="voice_navigation_guide">Voice navigation guide</string>
    <string name="we_found_multiple_policies_attached_to_same_mobile_number">"We found multiple policies attached to the
same mobile number. Please enter your
DOB to continue."</string>
    <string name="wed">W</string>
    <string name="what_is_smo">What is Second Medical Opinion (SMO)?</string>
    <string name="whats_include">What’s included?</string>
    <string name="whats_not_include">What’s not included?</string>
</resources>