<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:id="@id/activity_custom_calendar" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_weekdays" android:background="@color/white" android:paddingTop="@dimen/dimen_4dp" android:paddingBottom="@dimen/dimen_4dp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <TextView android:textStyle="bold" android:textColor="@color/grey4" android:gravity="center" android:id="@id/sun" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/sun" android:layout_weight="1.0" />
        <TextView android:textStyle="bold" android:textColor="@color/grey4" android:gravity="center" android:id="@id/mon" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/mon" android:layout_weight="1.0" />
        <TextView android:textStyle="bold" android:textColor="@color/grey4" android:gravity="center" android:id="@id/tue" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/tue" android:layout_weight="1.0" />
        <TextView android:textStyle="bold" android:textColor="@color/grey4" android:gravity="center" android:id="@id/wed" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/wed" android:layout_weight="1.0" />
        <TextView android:textStyle="bold" android:textColor="@color/grey4" android:gravity="center" android:id="@id/thu" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/thu" android:layout_weight="1.0" />
        <TextView android:textStyle="bold" android:textColor="@color/grey4" android:gravity="center" android:id="@id/fri" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/fri" android:layout_weight="1.0" />
        <TextView android:textStyle="bold" android:textColor="@color/grey4" android:gravity="center" android:id="@id/sat" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_4dp" android:text="@string/sat" android:layout_weight="1.0" />
    </LinearLayout>
    <GridView android:id="@id/calendar_grid" android:visibility="gone" android:scrollbars="none" android:layout_width="fill_parent" android:layout_height="wrap_content" android:numColumns="7" android:layout_below="@id/ll_weekdays" />
</RelativeLayout>
