<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@id/layout_password_validations" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:id="@id/llPasswordValidation" android:background="@drawable/login_need_help_bg" android:paddingTop="@dimen/dimen_13dp" android:paddingBottom="@dimen/dimen_10dp" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_20dp" android:layout_marginTop="@dimen/dimen_5dp" android:layout_marginRight="@dimen/dimen_20dp" android:paddingStart="@dimen/dimen_18dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/edtCreatePass">
        <TextView android:textSize="@dimen/text_16sp" android:textColor="@color/black" android:id="@id/lblPasswordLength" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/password_character_length_text" android:drawablePadding="@dimen/dimen_5dp" android:fontFamily="@font/pf_handbook_pro_light" />
        <TextView android:textSize="@dimen/text_16sp" android:textColor="@color/black" android:id="@id/lblPasswordCannotContain" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5dp" android:text="@string/password_cannot_contain_pass" android:drawablePadding="@dimen/dimen_5dp" android:fontFamily="@font/pf_handbook_pro_light" />
        <TextView android:textSize="@dimen/text_16sp" android:textColor="@color/black" android:id="@id/lblPasswordAlphaNum" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5dp" android:text="@string/password_alpha_numeric_text" android:drawablePadding="@dimen/dimen_5dp" android:fontFamily="@font/pf_handbook_pro_light" />
        <TextView android:textSize="@dimen/text_16sp" android:textColor="@color/black" android:id="@id/lblPasswordOptionalChar" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5dp" android:text="@string/password_optional_char_text" android:drawablePadding="@dimen/dimen_5dp" android:fontFamily="@font/pf_handbook_pro_light" />
        <TextView android:textSize="@dimen/text_16sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5dp" android:text="@string/username_not_as_password" android:fontFamily="@font/pf_handbook_pro_light" />
        <TextView android:textSize="@dimen/text_16sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_5dp" android:text="@string/password_example" android:fontFamily="@font/pf_handbook_pro_light" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
