<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/ll_main" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <include layout="@layout/toolbar_layout" />
    <androidx.core.widget.NestedScrollView android:paddingBottom="@dimen/dimen_10dp" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <include layout="@layout/aa_common_call_layout" />
            <TextView android:textSize="@dimen/text_21.1sp" android:textColor="@color/black" android:id="@id/txt_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:text="@string/free_medical_opinion" android:fontFamily="@font/pf_handbook_pro_regular" />
            <TextView android:textSize="@dimen/text_15.4sp" android:textColor="@color/light_black_desc" android:id="@id/e_opinion_decs_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:layout_marginTop="@dimen/dimen_8dp" android:layout_marginRight="@dimen/dimen_12dp" android:text="@string/automatically_enrolled_for_opinion_1" android:fontFamily="@font/pf_handbook_pro_thin" />
            <TextView android:textSize="@dimen/text_16.3sp" android:textColor="@color/light_black_desc" android:gravity="center|left" android:id="@id/e_opinion_decs_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_8dp" android:text="@string/automatically_enrolled_for_opinion_2" android:fontFamily="@font/pf_handbook_pro_thin" android:layout_marginStart="@dimen/dimen_14dp" android:layout_marginEnd="@dimen/dimen_14dp" />
            <TextView android:textSize="@dimen/text_21.1sp" android:textColor="@color/red_walkthrough" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/how_its_work_text" android:fontFamily="@font/pf_handbook_pro_regular" />
            <androidx.recyclerview.widget.RecyclerView android:id="@id/aa_2nd_opinion_recyclerview" android:background="@color/grey_bg1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_5dp" />
            <TextView android:textSize="@dimen/text_21.1sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:layout_marginTop="@dimen/dimen_7dp" android:text="@string/what_is_smo" android:fontFamily="@font/pf_handbook_pro_regular" />
            <TextView android:textSize="@dimen/text_15.4sp" android:textColor="@color/black" android:id="@id/text_smo_sec" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:layout_marginTop="@dimen/dimen_5dp" android:layout_marginBottom="7.0dip" android:text="@string/receive_doc_second_opinion" android:fontFamily="@font/pf_handbook_pro_thin" />
            <TextView android:textSize="@dimen/text_21.1sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:layout_marginTop="@dimen/dimen_0dp" android:layout_marginBottom="@dimen/dimen_0dp" android:text="@string/whats_include" android:fontFamily="@font/pf_handbook_pro_regular" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_0dp" android:layout_marginStart="@dimen/dimen_17dp" android:layout_marginEnd="@dimen/dimen_15dp">
                <TextView android:textSize="@dimen/text_14.3sp" android:textColor="@color/black_ul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="•" />
                <TextView android:textSize="@dimen/text_15sp" android:textColor="@color/black" android:id="@id/text_included_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/diagnosis_confirm" android:fontFamily="@font/pf_handbook_pro_thin" android:layout_marginStart="@dimen/dimen_5dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_0dp" android:layout_marginStart="@dimen/dimen_17dp" android:layout_marginEnd="@dimen/dimen_15dp">
                <TextView android:textSize="@dimen/text_14.3sp" android:textColor="@color/black_ul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_2dp" android:text="•" />
                <TextView android:textSize="@dimen/text_15sp" android:textColor="@color/black" android:id="@id/text_included_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/too_early_diagnosis" android:fontFamily="@font/pf_handbook_pro_thin" android:layout_marginStart="@dimen/dimen_5dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_0dp" android:layout_marginStart="@dimen/dimen_17dp" android:layout_marginEnd="@dimen/dimen_15dp">
                <TextView android:textSize="@dimen/text_14.3sp" android:textColor="@color/black_ul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_2dp" android:text="•" />
                <TextView android:textSize="@dimen/text_15sp" android:textColor="@color/black" android:id="@id/text_included_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/advice_best_course" android:fontFamily="@font/pf_handbook_pro_thin" android:layout_marginStart="@dimen/dimen_5dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_0dp" android:layout_marginStart="@dimen/dimen_17dp" android:layout_marginEnd="@dimen/dimen_15dp">
                <TextView android:textSize="@dimen/text_14.3sp" android:textColor="@color/black_ul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_2dp" android:text="•" />
                <TextView android:textSize="@dimen/text_15sp" android:textColor="@color/black" android:id="@id/text_included_4" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/follow_medical_advice" android:fontFamily="@font/pf_handbook_pro_thin" android:layout_marginStart="@dimen/dimen_5dp" />
            </LinearLayout>
            <TextView android:textSize="@dimen/text_21.1sp" android:textColor="@color/black" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:layout_marginTop="@dimen/dimen_7dp" android:layout_marginBottom="@dimen/dimen_7dp" android:text="@string/whats_not_include" android:fontFamily="@font/pf_handbook_pro_regular" />
            <TextView android:textSize="@dimen/text_15.4sp" android:textColor="@color/light_black_desc" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_12dp" android:text="There are absolutely no limitations on:" android:fontFamily="@font/pf_handbook_pro_bold" />
            <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_0dp" android:layout_marginStart="@dimen/dimen_17dp" android:layout_marginEnd="@dimen/dimen_15dp">
                <TextView android:textSize="@dimen/text_14.3sp" android:textColor="@color/black_ul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_2dp" android:text="•" />
                <TextView android:textSize="@dimen/text_15sp" android:textColor="@color/black" android:id="@id/text_not_included_1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/regular_illness_not_complex" android:fontFamily="@font/pf_handbook_pro_thin" android:layout_marginStart="@dimen/dimen_5dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="@dimen/dimen_17dp" android:layout_marginTop="@dimen/dimen_0dp" android:layout_marginStart="@dimen/dimen_17dp" android:layout_marginEnd="@dimen/dimen_15dp">
                <TextView android:textSize="@dimen/text_14.3sp" android:textColor="@color/black_ul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_2dp" android:text="•" />
                <TextView android:textSize="@dimen/text_15sp" android:textColor="@color/black" android:id="@id/text_not_included_2" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/pre_existing_condition" android:fontFamily="@font/pf_handbook_pro_thin" android:layout_marginStart="@dimen/dimen_5dp" />
            </LinearLayout>
            <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_0dp" android:layout_marginStart="@dimen/dimen_17dp" android:layout_marginEnd="@dimen/dimen_15dp">
                <TextView android:textSize="@dimen/text_14.3sp" android:textColor="@color/black_ul" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="2.0dip" android:text="•" />
                <TextView android:textSize="@dimen/text_15sp" android:textColor="@color/black" android:id="@id/text_not_included_3" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/dimen_10dp" android:text="@string/repeat_consultation" android:fontFamily="@font/pf_handbook_pro_thin" android:layout_marginStart="@dimen/dimen_5dp" />
            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
