<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="@dimen/dimen_320dp" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/text_16.3sp" android:textColor="@color/white" android:background="@drawable/red_bg_top_corners" android:padding="@dimen/dimen_20dp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/activ_health_registration" android:textAllCaps="true" android:fontFamily="@font/pf_handbook_pro_bold" />
    <LinearLayout android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="@dimen/text_15.4sp" android:textColor="@color/black" android:gravity="center_horizontal" android:autoLink="web" android:layout_gravity="center_vertical" android:id="@id/error_text" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_20dp" android:layout_marginTop="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_20dp" android:layout_marginBottom="@dimen/dimen_20dp" android:text="@string/already_register_click_login" android:fontFamily="@font/pf_handbook_pro_regular" />
        <TextView android:textSize="@dimen/text_15sp" android:gravity="center" android:id="@id/txt_login" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_35dp" android:layout_marginLeft="@dimen/dimen_20dp" android:layout_marginRight="@dimen/dimen_20dp" android:layout_marginBottom="@dimen/dimen_2dp" android:text="@string/login" android:drawableRight="@null" style="@style/YellowBgTextView" />
        <TextView android:textSize="@dimen/text_19.2sp" android:textColor="@color/vas_guide_bottom_text" android:gravity="center" android:id="@id/text_close" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:layout_marginBottom="@dimen/dimen_20dp" android:text="@string/close" android:fontFamily="@font/pf_handbook_pro_regular" />
    </LinearLayout>
</LinearLayout>
