<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:background="@color/white" android:paddingBottom="@dimen/dimen_20dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/text_21sp" android:textColor="@color/black" android:id="@id/lblDOB" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="30.0dip" android:text="@string/please_enter_date_of_birth" android:fontFamily="@font/pf_handbook_pro_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/text_16sp" android:id="@id/txt_otp" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/dimen_30dp" android:layout_marginTop="@dimen/dimen_16dp" android:layout_marginRight="@dimen/dimen_30dp" android:text="@string/we_found_multiple_policies_attached_to_same_mobile_number" android:fontFamily="@font/pf_handbook_pro_regular" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/lblDOB" />
    <EditText android:textSize="@dimen/text_20sp" android:textColor="@color/black" android:id="@id/edt_dob" android:background="@drawable/login_edittext_bg" android:padding="10.0dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:hint="@string/hint_dob" android:maxLength="20" android:inputType="number" android:imeOptions="actionDone" android:fontFamily="@font/pf_handbook_pro_light" android:layout_marginStart="@dimen/dimen_24dp" android:layout_marginEnd="@dimen/dimen_24dp" android:elevation="@dimen/dimen_1dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/txt_otp" />
    <TextView android:gravity="center" android:id="@id/btn_submitdob" android:background="@color/colorPrimary" android:layout_width="fill_parent" android:layout_marginTop="@dimen/dimen_40dp" android:text="@string/submit_small" android:textAllCaps="false" android:layout_marginStart="@dimen/dimen_20dp" android:layout_marginEnd="@dimen/dimen_20dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/edt_dob" style="@style/BgLoginTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>
